# NP-Instance-Map

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  install_deps.sh
.github/workflows/: dockerimage.yml
solver/: CMakeLists.txt  build.sh  cpp.hint
solver/cli/: CMakeLists.txt
solver/cli/src/: main.cpp
solver/np_solver/: CMakeLists.txt
solver/np_solver/include/np_solver/: dataset_repository.hpp  graph.hpp  isomorphism.hpp  math.hpp  max_independent_set.hpp  permutation_runner.hpp  solution.hpp
solver/np_solver/include/np_solver/filters/: instance_filter.hpp
solver/np_solver/include/np_solver/graphs/: di_graph.hpp  graph_base.hpp  graph_distance.hpp  graph_iterator.hpp  u_graph.hpp
solver/np_solver/include/np_solver/solvers/: instance_solver.hpp  max_clique.hpp  max_independent_set.hpp
solver/np_solver/src/: graph.cpp  lib.cpp
solver/np_solver/tests/: isomorphism_tests.cpp  math_tests.cpp  np_solver_tests.cpp
solver/np_solver/tests/graphs/: di_graph_tests.cpp  u_graph_test.cpp  u_graph_tests.cpp
visualizer/: app.py
